Reflx: Reflection of corrected markdown

--- a/index.html
+++ b/index.html
@@ -14703,8 +14703,8 @@ memory usage: 44.3+ MB
 </li>
 <li><p>Parent schooling information and career status</p>
 <ul>
-<li>Mother\<Highest Schooling> (ST13Q01)</li>
-<li>Father\<Highest Schooling> (ST17Q01)</li>
+<li>Mother [Highest Schooling] (ST13Q01)</li>
+<li>Father [Highest Schooling] (ST17Q01)</li>
 <li>Mother Current Job Status (ST15Q01)</li>
 <li>Father Current Job Status (ST19Q01)</li>
 <li>Father Occupation Status (BFMJ2)</li>
